# OS_Project_Fall2025

./: .gitignore  README.md
Backend/Chat1_Server/: Chat1_Server.vcxproj  Chat1_Server.vcxproj.filters  ChatServer.cpp  ChatServer.h  main.cpp
Backend/FinalChat1Bck/CLIENT/: main.cpp
Backend/FinalChat1Bck/SERVER/: CharServer.h  ChatServer.cpp  FullServerMain.cpp
Backend/FinalChat2Bck/Proccess1/: main.cpp
Backend/FinalChat2Bck/Proccess2/: main.cpp
Backend/Server/: ChatServer.cpp  ChatServer.h  Server.cpp  Server.h  main_server.cpp
CHAT2GUI/: ChatMessage.cpp  Semaphore.h  mainwindow.cpp  mainwindow.h
Documentation/: Operating Systems Project Documentation.docx
GUI/CHAT1GUI/: CMakeLists.txt  ChatClient.h  chatclient.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
GUI/CHAT2GUI/: ChatMessage.h  Semaphore.cpp
GUICHAT2GUI/: CMakeLists.txt  mainwindow.ui
demiana/: ChatMessage.cpp  ChatMessage.h  demiana.cpp  demiana.sln  demiana.vcxproj  demiana.vcxproj.filters
shared memory client/: 321.cbp  321.depend  main.cpp
shared memory server/: 8989.cbp  8989.depend  8989.layout  main2.cpp
